# convert-database

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  run-checks.yml
src/convert_database_tool/: main.py
src/convert_database_tool/SCRIPTS/: get_tables_to_convert.sql
src/convert_database_tool/configs/: dbConfig.toml
src/convert_database_tool/utils/: constants.py  query.py  update_config.py  update_sql.py  utils.py
